--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Kars/Turkey</p>
+                <p>Ankara/Turkey</p>
               </div>
 
               <div class="email"></div>
@@ -357,9 +357,7 @@
                 <h4>Email:</h4>
                 <p>eyyubtasdemir@gmail.com</p>
               </div>
-              <div>
-                <iframe width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=%20Kars+()&amp;t=k&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>   
-              </div>    
+              <div class="mapouter"><div class="gmap_canvas"><iframe width="520" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=Ankara&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/">divi discount</a><br><style>.mapouter{position:relative;text-align:right;height:400px;width:520px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:520px;}</style></div></div>  
 
             </div>
           </div>
