test for mastodon

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </section><!-- End About Section -->
 
-    
+    <a rel="me" href="https://sosyal.teknofest.app/@eyyubtasdemir">Test</a>
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -399,3 +399,4 @@
 </body>
 
 </html>
+
