--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -110,7 +110,7 @@
     </section><!-- End About Section -->
 
     <a rel="me" href="https://sosyal.teknofest.app/@eyyubtasdemir">Test</a>
-
+    <meta name="fediverse:creator" content="@eyyubtasdemir@sosyal.teknofest.app">
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
@@ -399,4 +399,5 @@
 </body>
 
 </html>
+
 
